--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,4 +1,8 @@
 .nav-header {
+    width: 100%;
+    position: fixed;
+    top: 0;
+    opacity: 0.5;
     background: @wild-sand;
     border-bottom: 1px solid @sea-shell;
     .center();
